simple_model_checker/grammar/FormulaParser.py
# Generated from Formula.g4 by ANTLR 4.13.2
# encoding: utf-8
# Updated 01/03/2025 for indentation fixing (Agastya Silvina)
from antlr4 import *
from io import StringIO
import sys

from simple_model_checker.grammar.formula import Formula

if sys.version_info[1] > 5:
	from typing import TextIO



class FormulaParser ( Parser ):

    grammarFileName = "Formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "'&&'", "'||'", "'=>'", "'<=>'", 
                     "'True'", "'False'", "'A'", "'E'", "<INVALID>", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TRUE", "FALSE", "ALL", 
                      "EXISTS", "UNTIL", "OPEN", "CLOSE", "ATOMIC", "TEMPORAL", 
                      "WS" ]

    RULE_query = 0
    RULE_formula = 1
    RULE_first = 2
    RULE_second = 3
    RULE_ctl_init = 4
    RULE_ctl_end = 5
    RULE_neg = 6
    RULE_op_bool = 7

    ruleNames =  [ "query", "formula", "first", "second", "ctl_init", "ctl_end", 
                   "neg", "op_bool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    TRUE=6
    FALSE=7
    ALL=8
    EXISTS=9
    UNTIL=10
    OPEN=11
    CLOSE=12
    ATOMIC=13
    TEMPORAL=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self._formula = None # FormulaContext

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext,0)


        def EOF(self):
            return self.getToken(FormulaParser.EOF, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = FormulaParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            localctx._formula = self.formula()
            self.state = 17
            self.match(FormulaParser.EOF)
            localctx.result = localctx._formula.result
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self.op = False
            self._first = None # FirstContext
            self._op_bool = None # Op_boolContext
            self._second = None # SecondContext
            self._ctl_end = None # Ctl_endContext
            self._neg = None # NegContext
            self._ctl_init = None # Ctl_initContext
            self._UNTIL = None # Token
            self._TEMPORAL = None # Token

        def TRUE(self):
            return self.getToken(FormulaParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(FormulaParser.FALSE, 0)

        def OPEN(self):
            return self.getToken(FormulaParser.OPEN, 0)

        def first(self):
            return self.getTypedRuleContext(FormulaParser.FirstContext,0)


        def CLOSE(self):
            return self.getToken(FormulaParser.CLOSE, 0)

        def op_bool(self):
            return self.getTypedRuleContext(FormulaParser.Op_boolContext,0)


        def second(self):
            return self.getTypedRuleContext(FormulaParser.SecondContext,0)


        def ctl_end(self):
            return self.getTypedRuleContext(FormulaParser.Ctl_endContext,0)


        def neg(self):
            return self.getTypedRuleContext(FormulaParser.NegContext,0)


        def ctl_init(self):
            return self.getTypedRuleContext(FormulaParser.Ctl_initContext,0)


        def EXISTS(self):
            return self.getToken(FormulaParser.EXISTS, 0)

        def UNTIL(self):
            return self.getToken(FormulaParser.UNTIL, 0)

        def ALL(self):
            return self.getToken(FormulaParser.ALL, 0)

        def TEMPORAL(self):
            return self.getToken(FormulaParser.TEMPORAL, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)




    def formula(self):

        localctx = FormulaParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_formula)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.match(FormulaParser.TRUE)
                localctx.result = Formula(True)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.match(FormulaParser.FALSE)
                localctx.result = Formula(False)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 24
                self.match(FormulaParser.OPEN)
                self.state = 25
                localctx._first = self.first()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                    self.state = 26
                    localctx._op_bool = self.op_bool()
                    self.state = 27
                    localctx._second = self.second()
                    localctx.op = True


                self.state = 32
                self.match(FormulaParser.CLOSE)

                if localctx.op:
                    localctx.result = Formula(localctx._first.result, localctx._second.result, localctx._op_bool.result)
                else:
                    localctx.result = Formula(localctx._first.result)
                        
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.match(FormulaParser.OPEN)
                self.state = 36
                localctx._first = self.first()
                self.state = 37
                localctx._op_bool = self.op_bool()
                self.state = 38
                localctx._ctl_end = self.ctl_end()
                self.state = 39
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula(localctx._first.result, localctx._ctl_end.result, localctx._op_bool.result)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                localctx._neg = self.neg()
                self.state = 43
                localctx._ctl_init = self.ctl_init()
                localctx.result = Formula(localctx._neg.result, localctx._ctl_init.result)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.match(FormulaParser.OPEN)
                self.state = 47
                localctx._ctl_init = self.ctl_init()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                    self.state = 48
                    localctx._op_bool = self.op_bool()
                    self.state = 49
                    localctx._ctl_end = self.ctl_end()
                    localctx.op = True


                self.state = 54
                self.match(FormulaParser.CLOSE)

                if localctx.op:
                    localctx.result = Formula(localctx._ctl_init.result, localctx._ctl_end.result, localctx._op_bool.result)
                else:
                    localctx.result = localctx._ctl_init.result
                        
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 57
                self.match(FormulaParser.EXISTS)
                self.state = 58
                self.match(FormulaParser.OPEN)
                self.state = 59
                localctx._first = self.first()
                self.state = 60
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 61
                localctx._second = self.second()
                self.state = 62
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("E", localctx._first.result, localctx._second.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 65
                self.match(FormulaParser.ALL)
                self.state = 66
                self.match(FormulaParser.OPEN)
                self.state = 67
                localctx._first = self.first()
                self.state = 68
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 69
                localctx._second = self.second()
                self.state = 70
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("A", localctx._first.result, localctx._second.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.match(FormulaParser.EXISTS)
                self.state = 74
                self.match(FormulaParser.OPEN)
                self.state = 75
                localctx._first = self.first()
                self.state = 76
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 77
                localctx._ctl_end = self.ctl_end()
                self.state = 78
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("E", localctx._first.result, localctx._ctl_end.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 81
                self.match(FormulaParser.ALL)
                self.state = 82
                self.match(FormulaParser.OPEN)
                self.state = 83
                localctx._first = self.first()
                self.state = 84
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 85
                localctx._ctl_end = self.ctl_end()
                self.state = 86
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("A", localctx._first.result, localctx._ctl_end.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 89
                self.match(FormulaParser.EXISTS)
                self.state = 90
                self.match(FormulaParser.OPEN)
                self.state = 91
                localctx._ctl_init = self.ctl_init()
                self.state = 92
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 93
                localctx._ctl_end = self.ctl_end()
                self.state = 94
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("E", localctx._ctl_init.result, localctx._ctl_end.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 97
                self.match(FormulaParser.ALL)
                self.state = 98
                self.match(FormulaParser.OPEN)
                self.state = 99
                localctx._ctl_init = self.ctl_init()
                self.state = 100
                localctx._UNTIL = self.match(FormulaParser.UNTIL)
                self.state = 101
                localctx._ctl_end = self.ctl_end()
                self.state = 102
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula("A", localctx._ctl_init.result, localctx._ctl_end.result, (None if localctx._UNTIL is None else localctx._UNTIL.text))
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 105
                localctx._TEMPORAL = self.match(FormulaParser.TEMPORAL)
                self.state = 106
                self.match(FormulaParser.OPEN)
                self.state = 107
                localctx._first = self.first()
                self.state = 108
                localctx._op_bool = self.op_bool()
                self.state = 109
                localctx._second = self.second()
                self.state = 110
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula((None if localctx._TEMPORAL is None else localctx._TEMPORAL.text), localctx._first.result, localctx._second.result, localctx._op_bool.result)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 113
                localctx._TEMPORAL = self.match(FormulaParser.TEMPORAL)
                self.state = 114
                self.match(FormulaParser.OPEN)
                self.state = 115
                localctx._first = self.first()
                self.state = 116
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula((None if localctx._TEMPORAL is None else localctx._TEMPORAL.text), localctx._first.result)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 119
                localctx._TEMPORAL = self.match(FormulaParser.TEMPORAL)
                self.state = 120
                self.match(FormulaParser.OPEN)
                self.state = 121
                localctx._first = self.first()
                self.state = 122
                localctx._op_bool = self.op_bool()
                self.state = 123
                localctx._ctl_end = self.ctl_end()
                self.state = 124
                self.match(FormulaParser.CLOSE)
                localctx.result = Formula((None if localctx._TEMPORAL is None else localctx._TEMPORAL.text), localctx._first.result, localctx._ctl_end.result, localctx._op_bool.result)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 127
                localctx._TEMPORAL = self.match(FormulaParser.TEMPORAL)
                self.state = 128
                self.match(FormulaParser.OPEN)
                self.state = 129
                localctx._ctl_init = self.ctl_init()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                    self.state = 130
                    localctx._op_bool = self.op_bool()
                    self.state = 131
                    localctx._ctl_end = self.ctl_end()
                    localctx.op = True


                self.state = 136
                self.match(FormulaParser.CLOSE)

                if localctx.op:
                    localctx.result = Formula((None if localctx._TEMPORAL is None else localctx._TEMPORAL.text), localctx._ctl_init.result, localctx._ctl_end.result, localctx._op_bool.result)
                else:
                    localctx.result = Formula((None if localctx._TEMPORAL is None else localctx._TEMPORAL.text), localctx._ctl_init.result)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FirstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self._ATOMIC = None # Token

        def ATOMIC(self):
            return self.getToken(FormulaParser.ATOMIC, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_first

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirst" ):
                listener.enterFirst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirst" ):
                listener.exitFirst(self)




    def first(self):

        localctx = FormulaParser.FirstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_first)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            localctx._ATOMIC = self.match(FormulaParser.ATOMIC)
            localctx.result = (None if localctx._ATOMIC is None else localctx._ATOMIC.text)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self._ATOMIC = None # Token

        def ATOMIC(self):
            return self.getToken(FormulaParser.ATOMIC, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_second

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecond" ):
                listener.enterSecond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecond" ):
                listener.exitSecond(self)




    def second(self):

        localctx = FormulaParser.SecondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_second)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            localctx._ATOMIC = self.match(FormulaParser.ATOMIC)
            localctx.result = (None if localctx._ATOMIC is None else localctx._ATOMIC.text)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ctl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self._formula = None # FormulaContext

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext,0)


        def getRuleIndex(self):
            return FormulaParser.RULE_ctl_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCtl_init" ):
                listener.enterCtl_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCtl_init" ):
                listener.exitCtl_init(self)




    def ctl_init(self):

        localctx = FormulaParser.Ctl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ctl_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            localctx._formula = self.formula()
            localctx.result = localctx._formula.result
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ctl_endContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self._formula = None # FormulaContext

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext,0)


        def getRuleIndex(self):
            return FormulaParser.RULE_ctl_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCtl_end" ):
                listener.enterCtl_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCtl_end" ):
                listener.exitCtl_end(self)




    def ctl_end(self):

        localctx = FormulaParser.Ctl_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ctl_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            localctx._formula = self.formula()
            localctx.result = localctx._formula.result
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NegContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None


        def getRuleIndex(self):
            return FormulaParser.RULE_neg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg" ):
                listener.enterNeg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg" ):
                listener.exitNeg(self)




    def neg(self):

        localctx = FormulaParser.NegContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_neg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(FormulaParser.T__0)
            localctx.result = True
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_boolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None


        def getRuleIndex(self):
            return FormulaParser.RULE_op_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_bool" ):
                listener.enterOp_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_bool" ):
                listener.exitOp_bool(self)




    def op_bool(self):

        localctx = FormulaParser.Op_boolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_op_bool)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(FormulaParser.T__1)
                localctx.result = "&&"
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(FormulaParser.T__2)
                localctx.result = "||"
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(FormulaParser.T__3)
                localctx.result = "=>"
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.match(FormulaParser.T__4)
                localctx.result = "<=>"
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





